--- a/Practice_BoilerPlate/8.4.0/aspnet-core/src/Practice_BoilerPlate.Core/Localization/SourceFiles/Practice_BoilerPlate.xml
+++ b/Practice_BoilerPlate/8.4.0/aspnet-core/src/Practice_BoilerPlate.Core/Localization/SourceFiles/Practice_BoilerPlate.xml
@@ -2,6 +2,12 @@
 <localizationDictionary culture="en">
   <texts>
 	  <text name="CreateNewEnrollment" value="Create New Enrollment" />
+	  <text name="CreateNewBed" value="Create New Bed" />
+	  <text name="EditBed" value="Edit Bed" />
+	  <text name="CreateNewPatient" value="Create New Patient" />
+	  <text name="EditPatient" value="Edit Patient" />
+	  <text name="CreateNewAdmission" value="Create New Admission" />
+	  <text name="EditAdmission" value="Edit Admission" />
 	  <text name="CreateTeacherSubject" value="Create Teacher Subject" />
 	 <text name="CreateNewStudent" value="Create New Student" />
 	 <text name="CreateNewEmployee" value="Create New Employee" />
